Correction avec Antoine V.

--- a/contents/_dansons-sur-le-volcan.html
+++ b/contents/_dansons-sur-le-volcan.html
@@ -9,12 +9,12 @@
 <section>
     <h2>Kézako ?</h2>
     <p>Viens, on va prendre de la hauteur pour co-construire la Contrée.</p>
-    <p>Du 9 au 12 novembre Stéphane propose de se retrouver à <a href=http://www.equisud.com>Equisud</a> dans les Pyrennées.</p>
+    <p>Du mardi 14 au vendredi 17 novembre, Stéphane propose de se retrouver à <a href=http://www.equisud.com>Equisud</a> dans les Pyrennées.</p>
 </section>
 <hr>
 <section>
     <h2>C'est quoi le format ?</h2>
-    <p>Un open-space au sens ut7 du terme ou un truc du genre.</p>
+    <p>Un open-space ou un truc du genre.</p>
 
     <h2>Pour les dates ça m'arrange pô ?</h2>
     <p>Elles ont été choisies arbitrairement, ça peut encore se modifier.</p>
@@ -22,17 +22,18 @@
 
     <h2>Je peux pas venir !</h2>
     <p>J'ai envie de te demander avec précaution : pourquoi ?</p>
-    <p>Juste pour voir si on ne pourrait t'aider à virer les obstacles qui empêche ta venue.</p>
+    <p>Peut-être est-ce un problème logistique, une appréhension, un vertige.</p>
+    <p>On pourrait peut-être t'aider à virer les obstacles qui empêche ta venue.</p>
     <p>N'hésite pas à nous contacter, tu es important.e.s pour nous.</p>
 
     <h2>On va faire quoi ?</h2>
-    <p>On va faire des trucs ensemble, s'aligner, se ren-Contrée.</p>
+    <p>On va se rencontrer, faire des trucs ensemble, s'aligner.</p>
     <p>On va dessiner - La Contrée - construire la vision et découvrir les valeurs.</p>
     <ul>
-        <li>Des ateliers pour piétiner joyeusement la première intention de Thibault, Erick, Stéphane et Maïtané.</li>
-        <li>Des jeux, de la cuisine ouverte, du code, des photos</li>
-        <li>Des balades, du sport, de la méditation, du cheval, de la grimpe</li>
-        <li>Des informelles, beaucoup d'informelles</li>
+        <li>Des ateliers pour piétiner joyeusement l'intention de départ.</li>
+        <li>Des jeux, de la cuisine ouverte, du code, des photos.</li>
+        <li>Des balades, du sport, de la méditation, du cheval, de la grimpe.</li>
+        <li>Des informelles, beaucoup d'informelles.</li>
     </ul>
 
     <h2>On pourra changer le nom aussi ?</h2>
@@ -72,6 +73,15 @@
         <li>Tu pourrais organiser un covoit' aussi.</li>
     </ul>
 
+    <p>Si tu arrives à la Tour de Carole ou à Mont-Louis, on pourra venir te chercher.</p>
+
+    <h2>Espace confortable</h2>
+    <p>À défaut d'avoir réussi à écrire un "code of conduct" plus ettofé : </p>
+    <blockquote>
+        <p>On s'attend à ce qu'il n'y ai pas de blagues, remarques, attitudes racistes, sexistes, genrées, discriminantes.</p>
+        <p>Plus généralement, on souhaite que tout le monde puisse se sentir tranquille et en sécurité pendant le séjour.</p>
+    </blockquote>
+
     <h2>Contact</h2>
     <p>Tu peux appeler Stéphane :</p>
     <ul>
@@ -81,7 +91,5 @@
     </ul>
 
 
-# Et pour miam ?
-# Régime
 # Dress code (<>)
 # programme
