--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
             <p>Je crois qu'en partageant nos singularités, nous construisons une communauté saine. Et je crois que de cette communauté saine va émerger une génération d’acteur.rice.s engagé.e.s, libéré.e.s du contrôle, et des jeux de domination ineptes.</p>
             <p>J'expérimente dans les domaines des collectifs, de la facilitation de groupe, du changement organisationnel et des conseils individuels pour nourrir ma quête d'une citoyenneté enthousiaste et apprenante.</p>
             <span class=links>
+                <a href=http://scopyleft.fr><i class="fa fa-sitemap"></i></a>
                 <a href=http://github.com/pointbar><i class="fa fa-github-alt"></i></a>
                 <a href=http://twitter.com/langlois_s><i class="fa fa-twitter"></i></a>
                 <a href=mailto:&#115;&#116;&#101;&#112;&#104;&#97;&#110;&#101;&#46;&#108;&#97;&#110;&#103;&#108;&#111;&#105;&#115;&#64;&#115;&#99;&#111;&#112;&#121;&#108;&#101;&#102;&#116;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a>
@@ -243,9 +244,11 @@
         <article>
             <h3>Alyssa Daoud<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/blur.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Adaptable à tous milieux, des plus institutionnels aux plus originaux, je suis de nature curieuse, enthousiaste, optimisme avec une énergie contagieuse !</p>
+            <p>Je suis facilitatrice en intelligence collective au service de la transition écologique et sociétale, de la lutte contre le gaspillage alimentaire, l’économie circulaire ou encore l’innovation sociale.</p>
+            <p>J’ai comme philosophie de vie de contribuer à mon échelle à résoudre les (si nombreux) défis de notre siècle pour une société plus juste, de connecter des personnes et transmettre l’envie d’agir. Bonne vivante, j’aime jouir de tous les sens !</p>
             <span class=links>
+                <a href=http://lesvigies.fr><i class="fa fa-sitemap"></i></a>
                 <a href=https://twitter.com/alyssadaoud><i class="fa fa-twitter"></i></a>
             </span>
         </article>
