Fix: retrieve lost text

--- a/contents/dansons-sur-le-volcan.html
+++ b/contents/dansons-sur-le-volcan.html
@@ -39,7 +39,15 @@
     </ul>
 
     <h2>Plus précisément ?</h2>
-
+    <p>Quelques exemples d'ateliers que l'on pourrait jouer :</p>
+    <ul>
+        <li>Un atelier photo pour remplacer les images de binômes actuelles.</li>
+        <li>Trouver ou valider le nom de l'actuelle Contrée.</li>
+        <li>Comment on fait rentrer des nouvelles têtes ?</li>
+        <li>Si on fait pas de manifesto, on fait comment pour s'aligner sur les valeurs ?</li>
+        <li>Vous ne trouvez pas que ça manque de diversités ?</li>
+        <li>Comment on pourrait en vivre un peu ?</li>
+    </ul>
 
     <h2>On pourra changer le nom aussi ?</h2>
     <p>Oui, le nom, les photos de fromages, l'objectif, la vision, les valeurs, tout.</p>
@@ -73,7 +81,7 @@
     <h2>Il y a des transports en communs pour venir ?</h2>
     <ul>
         <li>À partir de Perpignan, tu as un bus qui peut t'amener à Mont-Louis ou même aux Angles pour 1€.</li>
-        <li>Tu peux arriver en train à la <a href=https://www.youtube.com/watch?v=hQqiow76JdY>Tour de Carole.</a></li>
+        <li>Tu peux arriver en train à la <a href=https://www.youtube.com/watch?v=hQqiow76JdY>Tour de Carol.</a></li>
         <li>Pour les plus avantur.eux.euses, il y a aussi <a href=http://www.pyrenees-cerdagne.com/decouvrir/le-train-jaune/le-parcours>le petit train jaune</a></li>
         <li>Tu pourrais organiser un covoit' aussi.</li>
     </ul>
@@ -98,6 +106,7 @@
     <p>N'hésite pas à nous contacter, tu es important.e.s pour nous.</p>
 
     <h2>Je viens !</h2>
+    <p>Coche ta case, et on saura (les autres aussi :p).</p>
     <ul class=subscribers></ul>
 
     <h2>Contact</h2>
@@ -137,5 +146,3 @@
                 checkboxesOnclick(json)
             })
     </script>
-
-
