--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
     <h2>Les Humains</h2>
     <div class="grid-3 has-gutter">
         <article>
+                <h3>Noémie Girard<span class=baseline>Content strategist and product manager</span></h3>
+                <img src=img/humains/blur.jpg>
+                <p>I have spent years between France, the UK and the US.</p>
+                <p>Working in the arts and my background in postcolonial English literature have given me a culture of thinking about, connecting and translating concepts.</p>
+                <p>I now specialise in content strategy and product management, helping teams connect and advance on their projects in open and collaborative environments.</p>
+                <span class=links>
+                    <a href=https://noemiegirard.co><i class="fa fa-sitemap"></i></a>
+                    <a href=https://twitter.com/noeems><i class="fa fa-twitter"></i></a>
+                    <a href=mailto:&#97;&#110;&#116;&#111;&#105;&#110;&#101;&#64;&#99;&#101;&#122;&#97;&#114;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a>
+                </span>
+            </article>
+        <article>
             <h3>Antoine Cézar<span class=baseline>Software Troublemaker</span></h3>
             <img src=img/humains/blur.jpg>
             <p>Software Troublemaker, je pense comme George Carlin qu'il est important d'en avoir rien à carrer.</p>
@@ -457,7 +469,7 @@
 
 <script>
     // Create an array with 0 to n values and pseudo-shuffle
-    const serie = Array.apply(null, {length: 21})
+    const serie = Array.apply(null, {length: 22})
         .map(Number.call, Number)
         .sort(() => 0.5 - Math.random())
     const portraits = document.querySelectorAll('section#trainers img')
