--- a/contents/dansons-sur-le-volcan.html
+++ b/contents/dansons-sur-le-volcan.html
@@ -2,14 +2,14 @@
 <meta charset=utf-8>
 <title>Dansons sur le volcan</title>
 <header>
-    <h1>La &nbsp;<span>C</span>ontrée</h1>
+    <h1>rencontre</h1>
 </header>
 <style>
     ul.subscribers {
         columns: 3 15em;
     }
     
-    li {
+    ul.subscribers li {
         list-style-type: none;
     }
     
@@ -18,35 +18,40 @@
         height: 1.8em;
         padding-top: 1em;
     }
+    strong {
+        color: #92e080;
+    }
 </style>
 
 <section>
+    <h1>Viens, on va prendre de la hauteur pour co-construire la Contrée.</h1>
     <h2>Kézako ?</h2>
-    <p>Viens, on va prendre de la hauteur pour co-construire la Contrée.</p>
-    <p>Du mardi 14 au vendredi 17 novembre, Stéphane propose de se retrouver à <a href=http://www.equisud.com>Equisud</a> dans les Pyrénées.</p>
+    <p>Du <strong>mardi 14 au vendredi 17 novembre</strong>, Stéphane propose de se retrouver à <a href=http://www.equisud.com>Equisud</a> dans les Pyrénées.</p>
+    <p>Vous êtes invités, pendant plusieurs jours, pour ré-inventer un système de formation qui nous convienne.</p>
+    <p>Avec pour objectif qu'on fasse connaissance, qu'on revisite cette première intention (quitte à la piétiner), et peut-être même construire les premières actions.</p>
 </section>
-<hr>
 <section>
     <h2>C'est quoi le format ?</h2>
-    <p>Un open-space ou un truc du genre.</p>
+    <p>On va commencer par un open-space.</p>
 
     <h2>On va faire quoi ?</h2>
     <p>On va se rencontrer, faire des trucs ensemble, s'aligner.</p>
     <ul>
         <li>Des ateliers pour piétiner joyeusement l'intention de départ.</li>
-        <li>Des jeux, de la cuisine ouverte, du code, des photos.</li>
-        <li>Des balades, du sport, de la méditation, du cheval, de la grimpe.</li>
-        <li>Des informelles, beaucoup d'informelles.</li>
+        <li>Des jeux, de la cuisine ouverte, du code.</li>
+        <li>Des balades, du sport, de la méditation, de la grimpe.</li>
+        <li>Des informelles.</li>
     </ul>
 
     <h2>Plus précisément ?</h2>
     <p>Quelques exemples d'ateliers que l'on pourrait jouer :</p>
     <ul>
-        <li>Un atelier photo pour remplacer les images de binômes actuelles.</li>
-        <li>Comment on fait rentrer des nouvelles têtes ?</li>
-        <li>Si on fait pas de manifesto, on fait comment pour s'aligner sur les valeurs ?</li>
+        <li>Ce serait quoi les trois premiers petits pas de la Contrée ?</li>
+        <li>Comment on pourrait facturer sans piétiner l'enthousiasme ?</li>
+        <li>Si on fait pas de manifesto, on fait comment pour s'aligner ?</li>
         <li>Vous ne trouvez pas que ça manque de diversités ?</li>
-        <li>Comment on pourrait en vivre un peu ?</li>
+        <li>Comment on fait rentrer des nouvelles têtes ?</li>
+        <li>Un atelier photo pour remplacer les images de binômes actuelles.</li>
     </ul>
 
     <h2>On pourra changer le nom aussi ?</h2>
@@ -65,8 +70,19 @@
     <h2>On va manger quoi ?</h2>
     <p>Si tu manges sans gluten, que tu es végétalien·ne·s ou que tu as des restrictions alimentaires, sois gentil·le·s, préviens avant. Pour le reste nous n'avons pas encore statué.</p>
 
-    <h2>Je peux venir avec un.e cop.ain.ine, un.e proche ?</h2>
-    <p>Oui.</p>
+    <h2>Je peux venir avec un.e cop·ain·ine, un·e proche ?</h2>
+    <p>C'est pas facile à dire, mais, pour cette première édition, tu es invité, toi et personnes d'autres.</p>
+    <p>Si tu tiens compte de ça, oui, tu peux venir avec d'autres personnes.</p>
+
+    <h2>Tiens, beh justement, pourquoi moi ?</h2>
+    <p>Vous avez tous en commun, de prendre soin à ne pas piétiner les autres et une certaine incapacité à jouer au petit·e chef·fe.</p>
+    <p>Parce que vous savez qu'en parlant, vous aterrissez dans la tête de vos interlocuteurs. Et vous, à votre manière, vous avez tendance à vous essuyer les pieds avant d'entrer dans leurs oreilles.</p>
+    <p>Et parce que que vous avez tous un truc exceptionnel sur au moins un de ces trois axes :</p>
+    <ul>
+        <li>votre enthousiasme / votre entrain</li>
+        <li>votre pertinence / votre consistante</li>
+        <li>votre outillage affuté / votre expéience</li>
+    </ul>
 
     <h2>Je peux venir avec mon chien ?</h2>
     <p>Oui, emmène ta ménagerie aussi.</p>
@@ -82,7 +98,7 @@
     <ul>
         <li>À partir de Perpignan, tu as un bus qui peut t'amener à Mont-Louis ou même aux Angles pour 1€.</li>
         <li>Tu peux arriver en train à la <a href=https://www.youtube.com/watch?v=hQqiow76JdY>Tour de Carol.</a></li>
-        <li>Pour les plus avantur.eux.euses, il y a aussi <a href=http://www.pyrenees-cerdagne.com/decouvrir/le-train-jaune/le-parcours>le petit train jaune</a></li>
+        <li>Pour les plus avantur·eux·euses, il y a aussi <a href=http://www.pyrenees-cerdagne.com/decouvrir/le-train-jaune/le-parcours>le petit train jaune</a></li>
         <li>Tu pourrais organiser un covoit' aussi.</li>
     </ul>
 
@@ -96,14 +112,13 @@
     </blockquote>
 
     <h2>Pour les dates ça m'arrange pô ?</h2>
-    <p>Elles ont été choisies arbitrairement, ça peut encore se modifier.</p>
-    <p>Pis tu peux venir avant et après, on bossera ensemble pour consolider et pour préparer.</p>
+    <p>Tu peux venir avant et après, on bossera ensemble pour consolider et pour préparer.</p>
 
     <h2>Je peux pas venir !</h2>
     <p>J'ai envie de te demander avec précaution : pourquoi ?</p>
     <p>Peut-être est-ce un problème logistique, une appréhension, un vertige.</p>
     <p>On pourrait peut-être t'aider à virer les obstacles qui empêche ta venue.</p>
-    <p>N'hésite pas à nous contacter, tu es important.e.s pour nous.</p>
+    <p>N'hésite pas à nous contacter, tu es important·e·s pour nous.</p>
 
     <h2 id=subscribe>Je viens !</h2>
     <p>Coche ta case, et on saura (les autres aussi :p).</p>
