--- a/contents/dansons-sur-le-volcan.html
+++ b/contents/dansons-sur-le-volcan.html
@@ -26,7 +26,7 @@
 <section>
     <h1>Viens, on va prendre de la hauteur pour co-construire la Contrée.</h1>
     <h2>Kézako ?</h2>
-    <p>Du <strong>mardi 14 au vendredi 17 novembre</strong>, Stéphane propose de se retrouver à <a href=http://www.equisud.com>Equisud</a> dans les Pyrénées.</p>
+    <p>Du <strong>- mardi 14 au vendredi 17 novembre -</strong>, Stéphane propose de se retrouver à <a href=http://www.equisud.com>Equisud</a> dans les Pyrénées.</p>
     <p>Vous êtes invités, pendant plusieurs jours, pour ré-inventer un système de formation qui nous convienne.</p>
     <p>Avec pour objectif qu'on fasse connaissance, qu'on revisite cette première intention (quitte à la piétiner), et peut-être même construire les premières actions.</p>
 </section>
