--- a/contents/dansons-sur-le-volcan.html
+++ b/contents/dansons-sur-le-volcan.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <title>Dansons sur le volcan</title>
 <header>
-    <h1>rencontre</h1>
+    <h1>14-17 Nov</h1>
 </header>
 <style>
     ul.subscribers {
@@ -27,12 +27,26 @@
     <h1>Viens, on va prendre de la hauteur pour co-construire la Contrée.</h1>
     <h2>Kézako ?</h2>
     <p>Du <strong>- mardi 14 au vendredi 17 novembre -</strong>, Stéphane propose de se retrouver à <a href=http://www.equisud.com>Equisud</a> dans les Pyrénées.</p>
-    <p>Vous êtes invités, pendant plusieurs jours, pour ré-inventer un système de formation qui nous convienne.</p>
+    <p>Vous êtes invités, pendant plusieurs jours, pour re-visiter les pratiques de formation et construire quelque chose qui nous convienne.</p>
     <p>Avec pour objectif qu'on fasse connaissance, qu'on revisite cette première intention (quitte à la piétiner), et peut-être même construire les premières actions.</p>
 </section>
 <section>
     <h2>C'est quoi le format ?</h2>
-    <p>On va commencer par un open-space.</p>
+    <p>On ouvre un open-space le mardi 14 novembre à 10 heure du matin.</p>
+
+    <h2>Je peux venir avec un.e cop·ain·ine, un·e proche ?</h2>
+    <p>C'est pas facile à dire, mais, pour cette première édition, tu es invité, toi et personnes d'autres.</p>
+    <p>Si tu tiens compte de ça, oui, tu peux venir avec d'autres personnes.</p>
+
+    <h2>Tiens, beh justement, pourquoi moi ?</h2>
+    <p>Vous avez en commun d'apprécier les postures basses, de prendre soin des personnes avec qui vous collaborez.</p>
+    <p>Parce que vous savez qu'en parlant, vous aterrissez dans la tête de vos interlocuteurs. Et vous, à votre manière, vous avez tendance à vous essuyer les pieds avant d'entrer dans leurs oreilles.</p>
+    <p>Et parce que que vous avez tous un truc exceptionnel sur au moins un de ces trois axes :</p>
+    <ul>
+        <li>votre enthousiasme / votre entrain</li>
+        <li>votre pertinence / votre consistante</li>
+        <li>votre outillage affuté / votre expérience</li>
+    </ul>
 
     <h2>On va faire quoi ?</h2>
     <p>On va se rencontrer, faire des trucs ensemble, s'aligner.</p>
@@ -47,7 +61,7 @@
     <p>Quelques exemples d'ateliers que l'on pourrait jouer :</p>
     <ul>
         <li>Ce serait quoi les trois premiers petits pas de la Contrée ?</li>
-        <li>Comment on pourrait facturer sans piétiner l'enthousiasme ?</li>
+        <li>Comment on pourrait facturer tout en préservant notre enthousiasme ?</li>
         <li>Si on fait pas de manifesto, on fait comment pour s'aligner ?</li>
         <li>Vous ne trouvez pas que ça manque de diversités ?</li>
         <li>Comment on fait rentrer des nouvelles têtes ?</li>
@@ -69,20 +83,6 @@
 
     <h2>On va manger quoi ?</h2>
     <p>Si tu manges sans gluten, que tu es végétalien·ne·s ou que tu as des restrictions alimentaires, sois gentil·le·s, préviens avant. Pour le reste nous n'avons pas encore statué.</p>
-
-    <h2>Je peux venir avec un.e cop·ain·ine, un·e proche ?</h2>
-    <p>C'est pas facile à dire, mais, pour cette première édition, tu es invité, toi et personnes d'autres.</p>
-    <p>Si tu tiens compte de ça, oui, tu peux venir avec d'autres personnes.</p>
-
-    <h2>Tiens, beh justement, pourquoi moi ?</h2>
-    <p>Vous avez tous en commun, de prendre soin à ne pas piétiner les autres et une certaine incapacité à jouer au petit·e chef·fe.</p>
-    <p>Parce que vous savez qu'en parlant, vous aterrissez dans la tête de vos interlocuteurs. Et vous, à votre manière, vous avez tendance à vous essuyer les pieds avant d'entrer dans leurs oreilles.</p>
-    <p>Et parce que que vous avez tous un truc exceptionnel sur au moins un de ces trois axes :</p>
-    <ul>
-        <li>votre enthousiasme / votre entrain</li>
-        <li>votre pertinence / votre consistante</li>
-        <li>votre outillage affuté / votre expéience</li>
-    </ul>
 
     <h2>Je peux venir avec mon chien ?</h2>
     <p>Oui, emmène ta ménagerie aussi.</p>
