--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
             </span>
         </article>
         <article>
-            <h3>Pascal Romain<span class=baseline>Ingénieur documentaire transfuge agent triple-store</span></h3>
+            <h3>Juliette Palumbo<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
-                <a href=https://github.com/akakeronos><i class="fa fa-github-alt"></i></a>
-                <a href=https://twitter.com/keronos><i class="fa fa-twitter"></i></a>
+                <a href=https://github.com/juliette-pal><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/ju_net01><i class="fa fa-twitter"></i></a>
             </span>
         </article>
         <article>
@@ -232,13 +232,15 @@
             </span>
         </article>
         <article>
-            <h3>Juliette Palumbo<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Pascal Romain<span class=baseline>Ingénieur documentaire transfuge agent triple-store</span></h3>
             <img src=img/humains/blur.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Agent territorial je contribue actuellement à la transition numérique des organisations publiques.</p>
+            <p>De formation classique, je mets au service des utilisateurs ma connaissance des institutions publiques, mes capacités de synthèse et de médiation et ma culture générale en Web et administration système acquise au cours de mes 5 années de pratique professionnelle.</p>
+            <p>Mon objectif est de faciliter l'appropriation par tous des questions numériques dans les domaines des données et des documents mais j'agis en tant que facilitateur dès que l'occasion se présente.</p>
+            <p>Je suis par ailleurs investi sur des projets d'alimentation locale et d'agriculture paysanne.</p>
             <span class=links>
-                <a href=https://github.com/juliette-pal><i class="fa fa-github-alt"></i></a>
-                <a href=https://twitter.com/ju_net01><i class="fa fa-twitter"></i></a>
+                <a href=https://github.com/akakeronos><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/keronos><i class="fa fa-twitter"></i></a>
             </span>
         </article>
         <article>
