--- a/contents/dansons-sur-le-volcan.html
+++ b/contents/dansons-sur-le-volcan.html
@@ -155,7 +155,7 @@
                 }
             )
         }
-        fetch('https://api.myjson.com/bins/w3e9n')
+        fetch('https://api.myjson.com/bins/bx0kr')
             .then(response => response.json())
             .then(json => {
                 const ul = document.querySelector('ul.subscribers')
